--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "20.4.0"
+  },
   "scripts": {
-    "start": ""
+  "start": "node index.js"    
   },
   "keywords": [],
   "author": "",
